<resources>
    <string name="app_name">AppWork</string>
    <string name="se_connecter">Se connecter</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="first_name">First Name</string>
    <string name="e_mail">E-mail</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="last_name">Last Name</string>
    <string name="appliquer">Appliquer</string>
</resources>
